@@ -1,5 +1,7 @@
 package org.eclipse.tractusx.demandcapacitymgmt.demandcapacitymgmtbackend.security;
 
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -13,9 +15,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
@@ -24,8 +23,8 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(List.of("Cache-Control", "Content-Type","x-auth-token","Authorization"));
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000","http://localhost:8080"));
+        configuration.setAllowedHeaders(List.of("Cache-Control", "Content-Type", "x-auth-token", "Authorization"));
+        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000", "http://localhost:8080"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setExposedHeaders(List.of("Authorization"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -33,27 +32,24 @@ public class SecurityConfig {
         return source;
     }
 
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.cors(cors -> corsConfigurationSource());
         http.csrf(AbstractHttpConfigurer::disable);
-        http.sessionManagement(
-            sessionMgmt -> sessionMgmt.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-        );
+        http.sessionManagement(sessionMgmt -> sessionMgmt.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
         http.authorizeHttpRequests(
-                authorize ->
-                        authorize
-                                .requestMatchers(
-                                        HttpMethod.POST,
-                                        "/token/login",
-                                        "/token/refresh",
-                                        "/token/logout",
-                                        "/token/introspect"
-                                )
-                                .permitAll()
-                                .anyRequest()
-                                .authenticated()
+            authorize ->
+                authorize
+                    .requestMatchers(
+                        HttpMethod.POST,
+                        "/token/login",
+                        "/token/refresh",
+                        "/token/logout",
+                        "/token/introspect"
+                    )
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated()
         );
         http.oauth2ResourceServer(t -> t.jwt(Customizer.withDefaults()));
         return http.build();
